--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
 </style>
 
 <h1 class="text-primary text-center">Elon Musk</h1>
+
+<img src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
