Make page responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 </style>
 
-<h1 class="text-primary text-center">Elon Musk</h1>
+<div class="container-fluid">
+	<h1 class="text-primary text-center">Elon Musk</h1>
 
-<img src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+	<img src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+</div>
