Make image responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 	<h1 class="text-primary text-center">Elon Musk</h1>
 
-	<img alt="Photograph of Elon Musk from his Biograph by Ashlee Vance" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+	<img alt="Photograph of Elon Musk from his Biograph by Ashlee Vance" class="img-responsive" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
 
 </div>
