Add caption to the image and round the image for aesthetics

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 	<h1 class="text-primary text-center">Elon Musk</h1>
 
-	<img alt="Photograph of Elon Musk from his Biograph by Ashlee Vance" class="img-responsive center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
-
+	<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+	<div class="caption text-center">
+		Photograph of Elon Musk from his Biography by Ashlee Vance
+	</div>
+				
 </div>
