Add entire content into Bootstrap Jumbotron class for better design. Make Jumbotron background color orangish. Give a top margin.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
 
 <style>
 
+	body {
+		margin-top: 60px;
+	}
+
+	.jumbotron {
+		background-color: #ff9966;
+	}
+
 </style>
 
 <div class="container-fluid">
+	<div class="jumbotron">
+		<h1 class="text-primary text-center">Elon Musk</h1>
 
-	<h1 class="text-primary text-center">Elon Musk</h1>
-
-	<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
-	<div class="caption text-center">
-		Photograph of Elon Musk from his Biography by Ashlee Vance
-	</div>
-				
+		<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+		<div class="caption text-center">
+			Photograph of Elon Musk from his Biography by Ashlee Vance
+		</div>
+	</div>			
 </div>
