Make the customized Jumbotron narrow

--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 </style>
 
 <div class="container-fluid">
-	<div class="jumbotron">
-		<h1 class="text-primary text-center">Elon Musk</h1>
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+			<div class="jumbotron">
+				<h1 class="text-primary text-center">Elon Musk</h1>
 
-		<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
-		<div class="caption text-center">
-			Photograph of Elon Musk from his Biography by Ashlee Vance
-		</div>
-	</div>			
+				<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
+				<div class="caption text-center">
+					Photograph of Elon Musk from his Biography by Ashlee Vance
+				</div>
+			</div>			
+		</div>	
+		<div class="col-md-2"></div>	
+	</div>
 </div>
