Make h1 text page header. Add summary information about Elon from his Wikipedia page. Justify the paragraph text. Center and bold the h3 text.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,26 @@
 		<div class="col-md-2"></div>
 		<div class="col-md-8">
 			<div class="jumbotron">
-				<h1 class="text-primary text-center">Elon Musk</h1>
-
+				<div class="page-header">
+					<h1 class="text-primary text-center">Elon Musk</h1>
+				</div>
 				<img alt="Photograph of Elon Musk from his Biography by Ashlee Vance" class="img-responsive img-rounded center-block" src="https://regmedia.co.uk/2015/06/05/ashlee_vance_elon_musk_1.jpg">
 				<div class="caption text-center">
 					Photograph of Elon Musk from his Biography by Ashlee Vance
 				</div>
+				<h3 class="text-center"><strong>A brief summary about Elon Musk from his Wikipedia page:</strong></h3>
+				<p class="text-justify">
+					Elon Reeve Musk (born June 28, 1971) is a South African-born Canadian-American business magnate, engineer and inventor.
+				</p>
+				<p class="text-justify">
+					He is the founder, CEO and CTO of SpaceX; co-founder, CEO and product architect of Tesla Motors; co-founder and chairman of SolarCity, co-chairman of OpenAI; co-founder of Zip2; and co-founder of PayPal. As of June 2016, he has an estimated net worth of US$12.7 billion, making him the 83rd wealthiest person in the world.
+				</p>
+				<p class="text-justify">
+					Musk has stated that the goals of SolarCity, Tesla Motors, and SpaceX revolve around his vision to change the world and humanity. His goals include reducing global warming through sustainable energy production and consumption, and reducing the "risk of human extinction" by "making life multiplanetary" by setting up a human colony on Mars.
+				</p>
+				<p class="text-justify">
+					He has envisioned a high-speed transportation system known as the Hyperloop, and has proposed a VTOL supersonic jet aircraft with electric fan propulsion, known as the Musk electric jet.
+				</p>
 			</div>			
 		</div>	
 		<div class="col-md-2"></div>	
