Add link to his Wikipedia entry. Add personal signature tag at the bottom of the page.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
 				<p class="text-justify">
 					He has envisioned a high-speed transportation system known as the Hyperloop, and has proposed a VTOL supersonic jet aircraft with electric fan propulsion, known as the Musk electric jet.
 				</p>
+				<br>
+				<h3 class="text-center">Read more about Elon Musk on his <a href="https://en.wikipedia.org/wiki/Elon_Musk" target="_blank">Wikipedia entry</a></h3>
 			</div>			
 		</div>	
 		<div class="col-md-2"></div>	
 	</div>
+	<p class="text-center">Created by <a href="https://www.freecodecamp.com/caffeinehighzombie" target="_blank">RS Saranyaraj</a></p>
 </div>
