Import font-awesome. Add font-awesome icons and links to Elon's Twitter and Instagram.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<script>
-
-</script>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
 <style>
 
@@ -43,6 +41,7 @@
 				</p>
 				<br>
 				<h3 class="text-center">Read more about Elon Musk on his <a href="https://en.wikipedia.org/wiki/Elon_Musk" target="_blank">Wikipedia entry</a></h3>
+				<h4 class="text-center">You can also follow Elon on: <a href="https://twitter.com/elonmusk" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a> | <a href="https://www.instagram.com/elonmusk" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></h4>
 			</div>			
 		</div>	
 		<div class="col-md-2"></div>	
